export enum ActionType {
    INTERACT = 'INTERACT',
    OPERATION = 'OPERATION',
    APPLY = 'APPLY'
  }
  