
export class Diff {
    constructor(public readonly json: unknown) {}
}