export class Event {
    constructor(public readonly name: string, public readonly payload: unknown) {}
  }