export interface Scenario {
  name: string;
  payload: any;
}
